--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -1,128 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt">
-<head>
-	<meta charset="UTF-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-	<title>Clientes</title>
-
-	<link rel="stylesheet" type="text/css" href="/gerenciador/layout/stylesheets/vendors.min.css"/>
-	<link rel="stylesheet" type="text/css" href="/gerenciador/layout/stylesheets/algaworks.min.css"/>
-	<link rel="stylesheet" type="text/css" href="/gerenciador/layout/stylesheets/application.css"/>
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-</head>
+<html lang="pt" xmlns="http://www.w3.org/1999/xhtml"
+xmlns:th="http://www.thymeleaf.org"
+xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+layout:decorator="'layout/LayoutPadrao'">
+<head></head>
 <body>
-
-<div class="aw-layout-page">
-	<nav class="navbar  navbar-fixed-top  navbar-default  js-sticky-reference" id="main-navbar">
-	  <div class="container-fluid">
-
-	    <div class="navbar-header">
-	      <a class="navbar-brand  hidden-xs" href="#">
-	        <img alt="" src=""/>
-	      </a>
-
-	      <ul class="nav  navbar-nav">
-	        <li>
-	          <a href="#" class="js-sidebar-toggle"><i class="fa  fa-bars"></i></a>
-	        </li>
-	      </ul>
-	    </div>
-
-	    <ul class="nav navbar-nav  navbar-right">
-
-	      <li class="dropdown">
-	        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-	          <i class="fa  fa-user"></i>
-	        </a>
-	        
-	        <ul class="dropdown-menu">
-	          <li>
-	            <div class="aw-logged-user">
-	              <img src="https://api.adorable.io/avatars/80/joaodascouves" 
-	                width="80" height="80" alt="João das Couves" class="aw-logged-user__picture" />
-	              <span class="aw-logged-user__name">João das Couves</span>
-	            </div>
-	          </li>
-	          <li role="separator" class="divider"></li>
-	          <li><a href="#">Meu perfil</a></li>
-	          <li><a href="#">Alterar senha</a></li>
-	          <li><a href="#">Pagamentos</a></li>
-	        </ul>
-	      </li>
-	      
-	      <li>
-	        <a href="#"><em class="fa  fa-sign-out"></em></a>
-	      </li> 
-	    </ul>
-
-	  </div>
-	</nav>
-		<aside class="aw-layout-sidebar  js-sidebar">
-		<div class="aw-layout-sidebar__content">
-
-    <nav class="aw-menu  js-menu">
-      <ul class="aw-menu__list">
-
-        <li class="aw-menu__item">
-          <a href="dashboard.html"><i class="fa  fa-fw  fa-home"></i><span>Menu</span></a>
-        </li>
-
-        <li class="aw-menu__item  is-active">
-          <a href="#">
-            <i class="fa  fa-fw  fa-file-text"></i><span>Cadastros Clientes</span>
-            <i class="aw-menu__navigation-icon  fa"></i>
-          </a>
-          
-              <ul class="aw-menu__list  aw-menu__list--sublist">
-               <li class="aw-menu__item  aw-menu__item--link  is-active"><a href="pesquisa-produtos.html">Pesquisar de Clientes</a></li>
-            	<li class="aw-menu__item  aw-menu__item--link"><a href="cadastro-cliente.html">Cadastro de Cliente</a></li>
-               	<li class="aw-menu__item  aw-menu__item--link"><a href="tabela-sem-dados.html">Relatório Clientes</a></li>
-          </ul>
-        </li>
-      
-      	<li class="aw-menu__item  is-active">
-          <a href="#">
-            <i class="fa  fa-fw  fa-file-text"></i><span>Cadastros Funcionários</span>
-            <i class="aw-menu__navigation-icon  fa"></i>
-          </a>
-          
-              <ul class="aw-menu__list  aw-menu__list--sublist">
-            <li class="aw-menu__item  aw-menu__item--link"><a href="cadastro-cliente.html">Pesquisar Funcionários</a></li>
-            <li class="aw-menu__item  aw-menu__item--link  is-active"><a href="pesquisa-produtos.html">Cadastro de Funcionários</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="tabela-sem-dados.html">Relatório Funcionários</a></li>
-          </ul>
-        </li>
-      
-         <li class="aw-menu__item  is-expanded">
-          <a href="#">
-            <i class="fa  fa-fw  fa-file-text"></i><span>Páginas comuns</span>
-            <i class="aw-menu__navigation-icon  fa"></i>
-          </a>
-
-          <ul class="aw-menu__list  aw-menu__list--sublist">
-            <li class="aw-menu__item  aw-menu__item--link"><a href="pagina-vazia.html">Página vazia</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="login.html">Login</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="esqueceu-a-senha.html">Esqueceu a senha</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="403.html">403</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="404.html">404</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="500.html">500</a></li>
-          </ul>
-        </li>
-
-      </ul>
-    </nav>
-
-		</div>
-	</aside>
-		<section class="aw-layout-content  js-content">
+		<section class="aw-layout-content  js-content" layout:fragment="conteudo">
 
 				<div class="page-header top-fix">
 					<div class="container-fluid">
@@ -172,7 +55,7 @@
 							<div class="col-xs-6 col-sm-2 form-group">
 	                              <div class="input-group">
 	                              <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-	                              <input id="fullName" name="Nome Paciente" placeholder="Data Cadastro" class="form-control" required="true" value="" type="text">
+	                              <input id="fullName" name="Nome Paciente" class="form-control"  data-mask="00/00/0000" required="true" value="" type="text">
 	                              </div>
                             </div>
 							
@@ -289,50 +172,8 @@
 									  		<input name="zip" placeholder="00000-000" data-inputmask-inputformat="00000-000" class="form-control"  type="text">
 									    </div>
 									</div>
-							
-									<div class="col-xs-12 col-sm-3 form-group">
-									   <div class="input-group">
-									        <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-											<input name="address" placeholder="Telefone" class="form-control" type="text">
-									   </div>
-								 	</div>
-								 			
-				 					 <div class="col-xs-12 col-sm-6 form-group">
-									    <div class="input-group">
-									        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-									  		<input name="bairro" placeholder="Bairro" class="form-control"  type="text">
-									    </div>
-									 </div>	
-								 	
-								 	<div class="col-xs-6 col-sm-2 form-group">
-									    <div class="input-group">
-									        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-									  		<input name="zip" placeholder="00000-000" data-inputmask-inputformat="00000-000" class="form-control"  type="text">
-									    </div>
-									</div>
-							
-									<div class="col-xs-12 col-sm-3 form-group">
-									   <div class="input-group">
-									        <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-											<input name="address" placeholder="Telefone" class="form-control" type="text">
-									   </div>
-								 	</div>
-						</div>
-					<!-- // -->
-			<!-- 		
-					Inicio Panel Endereco
-		     <div class="tab-pane" id="3a">
-		     
-		    
-				
-				<div class="col-xs-6 col-sm-2 form-group">
-				    <div class="input-group">
-				        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-				  		<input name="zip" placeholder="00000-000" data-inputmask-inputformat="00000-000" class="form-control"  type="text">
-				    </div>
-				</div>
-							
-				 <div class="col-xs-12 col-sm-2 form-group">
+									
+									 <div class="col-xs-12 col-sm-2 form-group">
 				    <div class="input-group">
 				        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
 				  		<input name="city" placeholder="Cidade" class="form-control"  type="text">
@@ -345,23 +186,15 @@
 				  		<input name="city" placeholder="Estado" class="form-control"  type="text">
 				      </div>
 				  </div>
-		 </div>
-	//	 -->
+						</div>
 			</div>
 		</div>
-		
-		
-		</form>
-  </div> 
-   
-   		<div class="col-xs-12 col-sm-2 col-sm-offset-10 form-group ">
+		<div class="col-xs-12 col-sm-2 col-sm-offset-10 form-group ">
 			<button class="btn  btn-primary " type="submit">Salvar</button>
 			<button class="btn  btn-default" type="submit">Cancelar</button>
-		</div>	
-   
+			</div>	
+		</form>
+	</div>
 </section>
-
-	<script src="/gerenciador/layout/javascripts/vendors.min.js"></script>
-	<script src="/gerenciador/layout/javascripts/algaworks.min.js"></script>
-</body >
+</body>
 </html>
