--- a/gerenciadorClin/src/main/resources/templates/layout/LayoutPadrao.html
+++ b/gerenciadorClin/src/main/resources/templates/layout/LayoutPadrao.html
@@ -13,6 +13,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/vendors.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/algaworks.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/application.css}"/>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,6 +45,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <script th:src="@{/layout/javascripts/vendors.min.js}"></script>
 <script th:src="@{/layout/javascripts/algaworks.min.js}"></script>
 <script th:src="@{/layout/vendors/jquery/jquery.mask.min.js}"></script>
+<script th:src="@{/layout/vendors/jquery/validator.min.js}"></script>
 
 </body>
 </html>
