--- a/gerenciadorClin/src/main/resources/templates/layout/fragmentos/menuLateral.html
+++ b/gerenciadorClin/src/main/resources/templates/layout/fragmentos/menuLateral.html
@@ -17,45 +17,33 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
         <li class="aw-menu__item  is-active">
           <a href="#">
-            <i class="fa  fa-fw  fa-file-text"></i><span>Cadastros</span>
+            <i class="fa  fa-fw  fa-file-text"></i><span>Pesquisas</span>
             <i class="aw-menu__navigation-icon  fa"></i>
           </a>
       
           <ul class="aw-menu__list  aw-menu__list--sublist">
-            <li class="aw-menu__item  aw-menu__item--link"><a href="cadastro-produto.html">Cadastro de Cliente</a></li>
-            <li class="aw-menu__item  aw-menu__item--link  is-active"><a href="pesquisa-produtos.html">Pesquisa de produtos</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="tabela-sem-dados.html">Tabela sem dados</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="pesquisarClientes.html">Pesquisa de Clientes</a></li>
+            <li class="aw-menu__item  aw-menu__item--link  is-active"><a href="pesquisarFuncionarios.html">Pesquisa de Funcionários</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="pesquisarProdutos.html">Pesquisa de Produtos</a></li>
           </ul>
         </li>
 
         <li class="aw-menu__item  is-expanded">
           <a href="#">
-            <i class="fa  fa-fw  fa-file-text"></i><span>Páginas comuns</span>
+            <i class="fa  fa-fw  fa-file-text"></i><span>Cadastros</span>
             <i class="aw-menu__navigation-icon  fa"></i>
           </a>
 
           <ul class="aw-menu__list  aw-menu__list--sublist">
-            <li class="aw-menu__item  aw-menu__item--link"><a href="pagina-vazia.html">Página vazia</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="login.html">Login</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="esqueceu-a-senha.html">Esqueceu a senha</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="403.html">403</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="404.html">404</a></li>
-            <li class="aw-menu__item  aw-menu__item--link"><a href="500.html">500</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="pagina-vazia.html">Cadastro de Cliente</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="login.html">Cadastro de Funcionário</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="esqueceu-a-senha.html">Cadastro de Produto</a></li>
           </ul>
         </li>
 
       </ul>
     </nav>
-
 		</div>
 	</aside>
-
-
-
-
-
-
-
-
 </body>
 </html>
