Task - Nova Class Configuração - nova tela COnfiguração - atualização menu lateral

--- a/gerenciadorClin/src/main/resources/templates/layout/fragmentos/menuLateral.html
+++ b/gerenciadorClin/src/main/resources/templates/layout/fragmentos/menuLateral.html
@@ -40,6 +40,18 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
             <li class="aw-menu__item  aw-menu__item--link"><a href="esqueceu-a-senha.html">Cadastro de Produto</a></li>
           </ul>
         </li>
+        
+           <li class="aw-menu__item  is-expanded">
+          <a href="#">
+            <i class="fa  fa-fw  fa-file-text"></i><span>Configurações</span>
+            <i class="aw-menu__navigation-icon  fa"></i>
+          </a>
+
+          <ul class="aw-menu__list  aw-menu__list--sublist">
+            <li class="aw-menu__item  aw-menu__item--link"><a href="pagina-vazia.html">Configuração Agenda</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="login.html">Configuração Estoque</a></li>
+          </ul>
+        </li>
 
       </ul>
     </nav>
