Task - atualizacao controller class clientes

--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -45,7 +45,7 @@ layout:decorator="'layout/LayoutPadrao'">
 					<div class="col-xs-12 col-sm-2 form-group">
                           <div class="input-group">
                          	 <span class="input-group-addon"><i class="fas fa-file-contract "></i></span>
-                          	<input id="numProntuario" name="numProntuário" placeholder="Nº Prontuário" class="form-control" required="true" type="text">
+                          	<input id="numProntuario" name="numProntuário" placeholder="Nº Cliente" class="form-control" required="true" type="text">
                           </div>
                         </div>
 			
@@ -65,7 +65,7 @@ layout:decorator="'layout/LayoutPadrao'">
                          <div class="col-xs- 12 col-sm-12 form-group">
                            <div class="input-group">
                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                           <input id="fullName" name="Nome Paciente" placeholder="Nome Paciente" class="form-control" required="true" value="" type="text">
+                           <input id="fullName" name="Nome Paciente" placeholder="Nome Cliente" class="form-control" required="true" value="" type="text">
                          </div>
                          </div>
 					<div class="col-xs-6 col-sm-2 form-group">
@@ -97,25 +97,7 @@ layout:decorator="'layout/LayoutPadrao'">
 	                          </div>
 			                 </div>
 			               </div>
-			            </div>       
-                         
-                      <div class ="container-fluid">
-						<div class="row">
-							<div class="col-xs- 12 col-sm-2 form-group">
-	                          <div class="input-group">
-	                       	   	<span class="input-group-addon"><i class="fas fa-level-up-alt"></i></span>
-	                        	<input id="altura" name="altura"  class="form-control" data-mask="00" placeholder="Altura" required="true" value="" type="text">
-	                          </div>
-	                        </div>
-	                        
-	                        <div class="col-xs- 12 col-sm-2  form-group" >
-	                          <div class="input-group">
-	                        	<span class="input-group-addon"><i class="glyphicon glyphicon-scale"></i></span>
-	                          	<input id="peso" name="peso" placeholder="Peso" class="form-control" required="true" value="" type="text">
-	                          </div>
-			                 </div>
-			               </div>
-			             </div>   	
+			            </div>        	
 				   		   <div class="col-xs-12 col-sm-12 form-group">
 					   		 <div class="input-group">
 					   	 	 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
